# oop-lab

./: .gitignore  CMakeLists.txt  README.md
lab1/src/shiz/: CMakeLists.txt  shiz.cpp
lab1/test/: test01.cpp
lab2/: CMakeLists.txt
lab2/include/: eleven.h
lab2/src/: eleven.cpp
lab3/test/: main.cpp
lab4/include/: array.h
lab4/test/: main.cpp
lab5/test/: main.cpp
lab6/test/: main.cpp
lab7/: CMakeLists.txt
lab7/include/: npc.h
lab7/src/: npc.cpp
lab7/test/: main.cpp
src/: CMakeLists.txt
src/shiz/include/shiz/: shiz.hpp
test/: CMakeLists.txt
